@@ -16,6 +16,13 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2012-12-17 09:15 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
+  * hbqtwidgets/hbqtgetsys.prg
+  * hbqtwidgets/hbqtstd.ch
+  * hbqtwidgets/tests/validator.prg
+  * hbqtwidgets/tests/validatorgets.ui
+    + @ ... QGET ... PUSHBUTTON ... [ A work-in-progress ]
+
 2012-12-16 21:41 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
   * hbide/hbide_v.ch
   * hbqtwidgets/hbqtgetsys.prg
